src/objects/FC_ResponseReanimateManager__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Last_X_Days_Responded_For_Reopen__c</fullName>
        <description>Number of days to evaluate from today when looking for a response to re-animate.</description>
        <inlineHelpText>Number of days to evaluate from today when looking for a response to re-animate.</inlineHelpText>
        <label>Last X Days Responded For Reopen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Active_Status_Value__c</fullName>
        <label>Response Active Status Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Status_Values_to_Consider__c</fullName>
        <description>Response Status values that are eligible for re-animation</description>
        <inlineHelpText>Response Status values that are eligible for re-animation</inlineHelpText>
        <label>Response Status Values to Consider</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unopened_Response_Status_Values__c</fullName>
        <description>not in use</description>
        <inlineHelpText>not in use</inlineHelpText>
        <label>Unopened Response Status Values</label>
        <type>TextArea</type>
    </fields>
    <label>Response Reanimate Manager</label>
</CustomObject>